# pam_tfa

./: .gitignore  .travis.yml  AUTHORS  Makefile  Makefile.am  NEWS  README.md  Readme.md  TODO  configure.ac  default_config  dlopen.c  pam_tfa.c  run_if_travis.sh  run_test.sh  testdlopen.c  testpam.c  testtfa  util.c  util.h
